Omnibox - Default to Search if user is unlikely to be using URL auth

Inputs such as
parse error line 75 @class/subclass.cc:25
can be generously interpreted as using HTTP/HTTPS auth,
i.e., http://username:password@site/path
in this case with an omitted scheme, the username "parse error line 75 ",
and omitted password, a hostname "class" and a path "/subclass.cc:25".

When interpreted like this, the omnibox will identify the input type as URL
and make the default action a navigation to the (likely bad) URL

I believe most of the time an interpretation that involves pretending
the username has a space (and the user is trying to do http auth with this
username) is probably wrong unless there is strong evidence to the contrary.
I take strong evidence as the user explicitly typing http/https.

After this change, the default for inputs that contain a space will be of type
UNKNOWN.  The default action will be to search.

I decided not to go as far as to prohibit non-alphanumeric characters in the
username (which was one solution discussed on the bug).  I think it's likely
that users with other character sets may be non-Latin characters in their
username.  I'll stick with this narrower prohibition for now.

Tested interactively and with unit tests.

Bug: 737121
Change-Id: I251d750b3aa43d81733b8f88cfc1674bfaa3f003